--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -18,10 +18,10 @@
   <%= f.text_field :isbn %>
   <%= f.text_field :price %>
   <%= f.file_field :cover %>
-
+<%= f.submit %>
 <% end %>
   <div class="form-actions">
-    <%= f.button :submit, :class => 'btn-primary' %>
+
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 books_path, :class => 'btn btn-default' %>
   </div>
