--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,12 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
+         
         
+      
         </ul>
+         <% if user_signed_in? %>
+
 
   <%= form_tag(books_path, :method => "get", class: "navbar-form navbar-right", id: "search-form") do %>
     <div class="input-append">
@@ -43,9 +47,11 @@
       <!-- In order to have the "search" icon int the button, we need to use plain HTML instead 
            of using a Rails form helper -->
       <button type="submit" class="btn btn-default">Submit</button>
+      <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, :class => 'btn btn-large btn-danger' %>
     </div>
-<% end %>
 
+<%end%>
+<%end%>
 
          
       </div>
@@ -63,6 +69,6 @@
   
   </div>
   <br>
-  <footer>&copy; Jan Pieniążczak 2014</footer>
+  <footer>&copy; MirJan 2014</footer>
 </body>
 </html>
